# spider_new

./: README.md
hexapod_bringup/launch/: hexapod_simple.launch
hexapod_control_gazebo/: CMakeLists.txt  package.xml
hexapod_control_gazebo/include/: control_gazebo.h
hexapod_control_gazebo/src/: control_gazebo.cpp
hexapod_controller/: CMakeLists.txt
hexapod_controller/include/: control.h  gait.h  ik.h
hexapod_controller/src/: control.cpp  gait.cpp  hexapod_controller.cpp  ik.cpp  servo_driver.cpp
hexapod_msgs/: CMakeLists.txt
hexapod_msgs/msg/: MoveFeet.msg
hexapod_msgs/srv/: Reward.srv  RewardGyro.srv  RewardOdom.srv
move_feet/: CMakeLists.txt  package.xml
move_feet/config/: param_move_feet.yaml
move_feet/include/: move_feet.h
move_feet/src/: main_node.cpp  move_feet.cpp
reinforcement_learning/: CMakeLists.txt  package.xml
reinforcement_learning/config/: reinforcement_learning_param.yaml  reward.yaml
reinforcement_learning/include/: matrix.h  reinforcement_learning.h
reinforcement_learning/launch/: reinforcement_learning.launch
reinforcement_learning/src/: main.cpp
reinforcement_learning/statistics/: legs.txt  legs1.txt  legs2.txt  legs3.txt  legs4.txt  legs_change.txt  legs_change1.txt  legs_change2.txt  legs_change3.txt  legs_change4.txt  legs_change5.txt  legs_change_new1.txt  legs_change_new2.txt  legs_change_new3.txt  legs_change_new4.txt  legs_change_new5.txt  legs_change_new6.txt  legs_change_new7.txt  legs_change_new_leak_rate_test1.txt  legs_change_new_leak_rate_test_new_odom1.txt  legs_change_new_leak_rate_test_new_odom2.txt  legs_change_new_leak_rate_test_new_odom3.txt  legs_change_new_leak_rate_test_new_odom4.txt  legs_change_new_leak_rate_test_new_odom5.txt  legs_change_new_leak_rate_test_new_odom6.txt  legs_change_new_leak_rate_test_new_odom7.txt  legs_old.txt  reward.txt  reward1.txt  reward2.txt  reward3.txt  reward4.txt  reward_change.txt  reward_change1.txt  reward_change2.txt  reward_change3.txt  reward_change4.txt  reward_change5.txt  reward_change_new1.txt  reward_change_new2.txt  (+40 more)
reward_learning_gyro/: CMakeLists.txt  package.xml
reward_learning_gyro/include/: reward_gyro.h
reward_learning_gyro/src/: reward_gyro_node.cpp
reward_learning_odom/: CMakeLists.txt  package.xml
reward_learning_odom/include/: reward_odom.h
reward_learning_odom/src/: reward_odom_node.cpp
spider_control/: CMakeLists.txt  package.xml
spider_control/config/: spider_control.yaml
spider_control/launch/: spider_control.launch
spider_description/: CMakeLists.txt  package.xml
spider_description/config/: joint_names_Hexapod_urdf_v1.yaml
spider_description/launch/: display.launch  gazebo.launch
spider_description/meshes/: base_link.STL  link_c1_lf.STL  link_c1_lm.STL  link_c1_lr.STL  link_c1_rf.STL  link_c1_rm.STL  link_c1_rr.STL  link_thigh_lf.STL  link_thigh_lm.STL  link_thigh_lr.STL  link_thigh_rf.STL  link_thigh_rm.STL  link_thigh_rr.STL  link_tibia_lf.STL  link_tibia_lm.STL  link_tibia_lr.STL  link_tibia_rf.STL  link_tibia_rm.STL  link_tibia_rr.STL
spider_description/params/: spider.yaml
spider_description/urdf/: first_attempt.xacro  hexapod.xacro  spider.xacro  spider1.urdf  spider_in_world.xacro  world.xacro
spider_gazebo/: CMakeLists.txt  package.xml
spider_gazebo/launch/: rviz_spider.rviz  srider_gazebo.launch  srider_gazebo1.launch  srider_rviz.launch  srider_rviz.launch.txt  srider_xacro.launch  srider_xacro_rviz.launch
test_learning/: CMakeLists.txt  package.xml
test_learning/src/: test_tripod_gait.cpp  test_wrong_gait.cpp
